# evm-powers-of-tau

./: Cargo.toml  README.md  build.rs
contracts/: KZG.sol
src/: lib.rs  pot_update.rs  query.rs  utils.rs
techreport/: main.bib  main.tex
tests/: integration_test.rs
