[package]
name = "rust-pot"
version = "0.1.0"
edition = "2021"

[build-dependencies]
ethers-solc = { git = "https://github.com/gakonst/ethers-rs" }

[dependencies]
anyhow = "1.0"
ark-bn254 = "0.3.0"
ark-ec = "0.3.0"
ark-ff = "0.3.0"
ark-serialize = "0.3.0"
ark-std = "0.3.0"
ethers = { git = "https://github.com/gakonst/ethers-rs", features=["abigen", "solc-full"] }
rand = "0.8.5"
sha2 = "0.10.2"
tiny-keccak = { version = "2.0.2", features = ["keccak"]}
tokio = { version = "1.20.4", features = ["macros", "rt"] }